# discord-monitor

./: .gitignore  AGENTS.md  README.md  build.ps1  main.py  pyproject.toml  requirements.txt
